<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="32dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/my_device_details_device_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_phone_android_24dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/my_device_details_device_nickname"
                style="@style/TextAppearance.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_defaultValue" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/TextAppearance.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_deviceId"/>

            <TextView
                style="@style/TextAppearance.Secondary"
                android:id="@+id/my_device_details_device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_defaultValue"
                android:textSize="@dimen/font_size_primary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/TextAppearance.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_deviceName"/>

            <TextView
                style="@style/TextAppearance.Secondary"
                android:id="@+id/my_device_details_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_defaultValue"
                android:textSize="@dimen/font_size_primary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                style="@style/TextAppearance.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_appVersion"/>

            <TextView
                style="@style/TextAppearance.Secondary"
                android:id="@+id/my_device_details_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_defaultValue"
                android:textSize="@dimen/font_size_primary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                style="@style/TextAppearance.Primary"
                android:id="@+id/my_device_details_allow_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_allowAccess" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>