<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="@dimen/corner_radius">

        <!-- To make vertical align -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Options description -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    style="?textAppearanceBody2"
                    android:textColor="@color/colorTextSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_addDeviceHelp" />
            </LinearLayout>

            <!-- Show connection information -->
            <LinearLayout
                android:id="@+id/add_option_connection_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:background="?rippleSelector"
                android:gravity="center_vertical"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="4dp"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_info_24dp"/>

                <TextView
                    style="?textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_showDeviceInfo"/>

            </LinearLayout>

            <!-- Scan qr code -->
            <LinearLayout
                android:id="@+id/add_option_scan_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:background="?rippleSelector"
                android:gravity="center_vertical"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="4dp"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_scan_qr_code_24dp"/>

                <TextView
                    style="?textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_scanQrCode"/>

            </LinearLayout>

            <!-- Enter IP Manually -->
            <LinearLayout
                android:id="@+id/add_option_enter_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:background="?rippleSelector"
                android:gravity="center_vertical"
                android:clickable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="4dp"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_edit_24dp"/>

                <TextView
                    style="?textAppearanceBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_enterIdManually"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <include
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        layout="@layout/help_hint_static" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            style="?textAppearanceSubtitle2"
            android:id="@+id/list_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_useDiscoveredDevices"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_centerVertical="true"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:background="?colorDecorator" />

    <!-- TODO: think about height-->
    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        class="com.naloaty.syncshare.fragment.NearbyDiscoveryFragment"
        android:tag="nearbyDevicesList"/>

</LinearLayout>